--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using static Bookworm.Common.Quotes.QuotesDataConstants;
+﻿@using static Bookworm.Common.Constants.DataConstants.QuoteDataConstants;
 
 @{
     string title = ViewData["Title"] as string;
