--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_TitleCardPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_TitleCardPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TitleCardPartialViewModel
 
-<div class="d-flex justify-content-center mt-5">
+<div class="title-card-container">
     <div class="card title-card">
         <div class="card-body">
             @if (Model.Count != null)
