--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Bookworm.Web
-@using Bookworm.Common
+@using Bookworm.Common.Constants
 @using Bookworm.Common.Enums;
+@using Bookworm.Data.Models
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Pagination
 @using Bookworm.Web.ViewModels.Home
