--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -5,88 +5,89 @@
     var titleCardModel = new TitleCardPartialViewModel { Title = "Upload Quote", IconClass = "fa-pen" };
 }
 
-<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
+@section Styles {
+    <link rel="stylesheet" href="~/css/quoteUpload.css" asp-append-version="true" />
+}
 
-<!-- Button trigger modal -->
-<div class="uploadQuoteBtnsContainer">
-    <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#movieModal">
-        <strong>Movie Quote</strong><i class="fa-solid fa-film ms-3 fa-xl"></i>
-    </button>
+<section class="uploadQuoteSection">
+    <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
+    <div class="uploadQuoteBtnsContainer">
+        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#movieModal">
+            <strong>Movie Quote</strong><i class="fa-solid fa-film ms-3 fa-xl"></i>
+        </button>
 
-    <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#bookModal">
-        <strong>Book Quote</strong><i class="fa-solid fa-book ms-3 fa-xl"></i>
-    </button>
+        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#bookModal">
+            <strong>Book Quote</strong><i class="fa-solid fa-book ms-3 fa-xl"></i>
+        </button>
 
-    <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#otherModal">
-        <strong>General Quote</strong><i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
-    </button>
-</div>
+        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#otherModal">
+            <strong>General Quote</strong><i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
+        </button>
+    </div>
 
-<!-- Modal for Movie Quote -->
-<div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Movie Quote</h1>
-                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-            </div>
-            <div class="modal-body uploadQuoteModalContainer">
-                <img class="col-4" src="~/images/movieQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="Upload">
-                    <partial name="PartialViews/Quotes/QuotesTypesInputs/_MovieQuoteInputsPartial" />
-                    <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="btn button form-button">
-                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                        </button>
-                    </div>
-                </form>
+    <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Movie Quote</h1>
+                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                </div>
+                <div class="modal-body uploadQuoteModalContainer">
+                    <img class="col-4" src="~/images/movieQuote.jpg" />
+                    <form method="post" asp-controller="Quote" asp-action="Upload">
+                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_MovieQuoteInputsPartial" />
+                        <div class="text-center mt-4 mb-5">
+                            <button type="submit" class="btn button form-button">
+                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<!-- Modal for Book Quote -->
-<div class="modal fade" id="bookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Book Quote</h1>
-                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-            </div>
-            <div class="modal-body uploadQuoteModalContainer">
-                <img class="img-fluid" src="~/images/bookQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="Upload">
-                    <partial name="PartialViews/Quotes/QuotesTypesInputs/_BookQuoteInputsPartial" />
-                    <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="btn button form-button">
-                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                        </button>
-                    </div>
-                </form>
+    <div class="modal fade" id="bookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Book Quote</h1>
+                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                </div>
+                <div class="modal-body uploadQuoteModalContainer">
+                    <img class="img-fluid" src="~/images/bookQuote.jpg" />
+                    <form method="post" asp-controller="Quote" asp-action="Upload">
+                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_BookQuoteInputsPartial" />
+                        <div class="text-center mt-4 mb-5">
+                            <button type="submit" class="btn button form-button">
+                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<!-- Modal for General Quote -->
-<div class="modal fade" id="otherModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload General Quote</h1>
-                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-            </div>
-            <div class="modal-body uploadQuoteModalContainer">
-                <img class="col-4" src="~/images/generalQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="Upload">
-                    <partial name="PartialViews/Quotes/QuotesTypesInputs/_GeneralQuoteInputsPartial" />
-                    <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="btn button form-button">
-                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                        </button>
-                    </div>
-                </form>
+    <div class="modal fade" id="otherModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload General Quote</h1>
+                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                </div>
+                <div class="modal-body uploadQuoteModalContainer">
+                    <img class="col-4" src="~/images/generalQuote.jpg" />
+                    <form method="post" asp-controller="Quote" asp-action="Upload">
+                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_GeneralQuoteInputsPartial" />
+                        <div class="text-center mt-4 mb-5">
+                            <button type="submit" class="btn button form-button">
+                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
