--- a/Web/Bookworm.Web/Views/Shared/Components/Pagination/Default.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/Components/Pagination/Default.cshtml
@@ -14,7 +14,7 @@
                 <a class="page-link"
                    asp-controller=@controller
                    asp-action=@action
-                   asp-route-id="@Model.PreviousPageNumber"
+                   asp-route-page="@Model.PreviousPageNumber"
                    asp-route-category=@this.ViewData["Title"]>
                     <i class="fa fa-angles-left"></i>
                 </a>
@@ -24,7 +24,7 @@
                 <a class="page-link"
                    asp-controller=@controller
                    asp-action=@action
-                   asp-route-id="@Model.PreviousPageNumber">
+                   asp-route-page="@Model.PreviousPageNumber">
                     <i class="fa fa-angles-left"></i>
                 </a>
             }
@@ -39,7 +39,7 @@
                         <a class="page-link"
                            asp-controller=@controller
                            asp-action=@action
-                           asp-route-id="@Model.PreviousPageNumber"
+                           asp-route-page="@Model.PreviousPageNumber"
                            asp-route-category=@this.ViewData["Title"]>
                             @i
                         </a>
@@ -49,7 +49,7 @@
                         <a class="page-link"
                            asp-controller=@controller
                            asp-action=@action
-                           asp-route-id="@i">
+                           asp-route-page="@i">
                             @i
                         </a>
                     }
@@ -72,7 +72,7 @@
                         <a class="page-link"
                            asp-controller=@controller
                            asp-action=@action
-                           asp-route-id="@i"
+                           asp-route-page="@i"
                            asp-route-category=@this.ViewData["Title"]>
                             @i
                         </a>
@@ -82,7 +82,7 @@
                         <a class="page-link"
                            asp-controller=@controller
                            asp-action=@action
-                           asp-route-id="@i">
+                           asp-route-page="@i">
                             @i
                         </a>
                     }
@@ -95,7 +95,7 @@
                 <a class="page-link"
                    asp-controller=@controller
                    asp-action=@action
-                   asp-route-id="@Model.NextPageNumber"
+                   asp-route-page="@Model.NextPageNumber"
                    asp-route-category=@this.ViewData["Title"]>
                     <i class="fa fa-angles-right"></i>
                 </a>
@@ -105,7 +105,7 @@
                 <a class="page-link"
                    asp-controller=@controller
                    asp-action=@action
-                   asp-route-id="@Model.NextPageNumber">
+                   asp-route-page="@Model.NextPageNumber">
                     <i class="fa fa-angles-right"></i>
                 </a>
             }
