--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -1,9 +1,7 @@
-﻿@using Bookworm.Common
-@using Bookworm.Data.Models
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
+
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
 
 @if (this.SignInManager.IsSignedIn(this.User))
 {
