--- a/Web/Bookworm.Web/wwwroot/css/categories.css
+++ b/Web/Bookworm.Web/wwwroot/css/categories.css
@@ -6,7 +6,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
-    padding: 2rem 0;
+    padding: 2rem;
     margin: 2rem 0;
     background-color: var(--clr-primary);
     border-color: var(--clr-secondary);
@@ -30,7 +30,7 @@
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: .5s ease;
+    transition: .3s ease;
     background-color: var(--clr-secondary);
     border-radius: 15px;
 }
@@ -52,4 +52,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 800px){
+    .categoriesSection {
+        flex-direction: column;
+    }
+
+        .categoriesSection a {
+            width: 100%;
+        }
 }
