--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -90,42 +90,9 @@
             </div>
         </div>
     </div>
+
 </section>
 
 @section Scripts {
-    <script>
-        const myModalEl = document.getElementById('movieModal');
-        myModalEl.addEventListener('hide.bs.modal', event => {
-            $("#movieQuoteForm").validate().resetForm();
-            $("#movieQuoteForm input, #movieQuoteForm textarea").val("");
-        });
-        $("#movieQuoteForm").validate({
-            rules: {
-                MovieTitle: {
-                    required: true,
-                    minlength: 5,
-                    maxlength: 150
-                },
-                Content: {
-                    required: true,
-                    minlength: 10,
-                    maxlength: 150
-                }
-            },
-            messages: {
-                MovieTitle: {
-                    required: "Movie Title field is required!",
-                    minlength: "Movie Title must be at least 5 characters long!",
-                    maxlength: "Movie Title must not exceed 150 characters!"
-                },
-                Content: {
-                    required: "Content field is required!",
-                    minlength: "Content must be at least 10 characters long!",
-                    maxlength: "Content must not exceed 150 characters!"
-                }
-            },
-            errorElement: "span",
-            errorClass: "text-danger",
-        });
-    </script>
+    <script src="~/js/quotes/quoteUpload.js"></script>
 }
