--- a/Web/Bookworm.Web/Areas/Identity/Views/User/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Views/User/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model LoginModel
+﻿@model LoginViewModel
 
 @{
     this.ViewData["Title"] = "Login";
@@ -13,22 +12,22 @@
         <form id="account" method="post">
             <h5 class="text-center text-uppercase fs-2">Login</h5>
             <partial name="PartialViews/_CustomDividerPartial" />
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
-                <label asp-for="Input.UserName"></label>
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <input asp-for="@Model.UserName" class="form-control border border-2" placeholder="username">
+                <label asp-for="@Model.UserName"></label>
+                <span asp-validation-for="@Model.UserName" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input type="password" asp-for="Input.Password" class="form-control border border-2 mt-3" placeholder="Password" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <input type="password" asp-for="@Model.Password" class="form-control border border-2 mt-3" placeholder="Password" />
+                <label asp-for="@Model.Password"></label>
+                <span asp-validation-for="@Model.Password" class="text-danger"></span>
             </div>
             <div class="form-group my-3">
                 <div class="checkbox">
-                    <label asp-for="Input.RememberMe" class="d-flex align-items-center gap-2 rememberMe">
-                        <input asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                    <label asp-for="@Model.RememberMe" class="d-flex align-items-center gap-2 rememberMe">
+                        <input asp-for="@Model.RememberMe" />
+                        @Html.DisplayNameFor(m => m.RememberMe)
                     </label>
                 </div>
             </div>
@@ -63,14 +62,20 @@
                     }
                 }
                 <div class="text-center">
-                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+                    <a class="form-link"
+                       asp-area="Identity"
+                       asp-controller="User"
+                       asp-action="Register"
+                       asp-route-returnUrl="@Model.ReturnUrl">
+                        You don't have an account? Register here!
+                    </a>
+                </div>
+                @* <div class="text-center">
+                <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
                 </div>
                 <div class="text-center">
-                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                </div>
-                <div class="text-center">
-                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
-                </div>
+                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
+                </div> *@
             </div>
         </form>
     </div>
