--- a/Web/Bookworm.Web/Areas/Identity/Views/User/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Views/User/Register.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model RegisterModel
+﻿@model RegisterViewModel
 
 @{
     this.ViewData["Title"] = "Register";
@@ -16,36 +15,35 @@
             <partial name="PartialViews/_CustomDividerPartial" />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.UserName" class="form-control border-2" placeholder="username" />
-                <label asp-for="Input.UserName"></label>
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <input asp-for="@Model.UserName" class="form-control border-2" placeholder="username" />
+                <label asp-for="@Model.UserName"></label>
+                <span asp-validation-for="@Model.UserName" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control border-2 mt-3" placeholder="name@example.com" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <input asp-for="@Model.Email" class="form-control border-2 mt-3" placeholder="name@example.com" />
+                <label asp-for="@Model.Email"></label>
+                <span asp-validation-for="@Model.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control border border-2 mt-3" placeholder="password" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <input asp-for="@Model.Password" class="form-control border border-2 mt-3" placeholder="password" />
+                <label asp-for="@Model.Password"></label>
+                <span asp-validation-for="@Model.Password" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control border border-2 mt-3" placeholder="confirm password" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <input asp-for="@Model.ConfirmPassword" class="form-control border border-2 mt-3" placeholder="confirm password" />
+                <label asp-for="@Model.ConfirmPassword"></label>
+                <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group text-center my-4">
                 <button type="submit" class="btn btn-lg">Register<i class="fa-solid fa-user-plus ms-2"></i></button>
             </div>
-            <div class="text-center">
+            @* <div class="text-center">
                 <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
             </div>
             <div class="text-center">
                 <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
-            </div>
+            </div> *@
         </form>
-
     </div>
 </div>
 
