--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -58,7 +58,8 @@
 
     <footer class="bookworm-footer">
         <span>
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - 
+            <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </span>
     </footer>
 
