Add ForgotPassword action in UserController

--- a/Web/Bookworm.Web/Areas/Identity/Views/User/AccessDenied.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Views/User/AccessDenied.cshtml
@@ -1,11 +1,8 @@
-﻿@page
-@model AccessDeniedModel
-
-@{
+﻿@{
     ViewData["Title"] = "Access denied";
 }
 
 <header class="text-center mt-5 animate__animated animate__pulse fs-2">
-    <h1 class="text-danger">@ViewData["Title"]</h1>
+    <h1 class="text-danger">@ViewData["Title"]!</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
