--- a/Web/Bookworm.Web/Areas/Identity/Views/User/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Views/User/Login.cshtml
@@ -62,6 +62,9 @@
                     }
                 }
                 <div class="text-center">
+                    <a class="form-link" asp-area="Identity" asp-controller="User" asp-action="ForgotPassword">Forgot Password?</a>
+                </div>
+                <div class="text-center">
                     <a class="form-link"
                        asp-area="Identity"
                        asp-controller="User"
@@ -70,9 +73,7 @@
                         You don't have an account? Register here!
                     </a>
                 </div>
-                @* <div class="text-center">
-                <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
-                </div>
+                @* 
                 <div class="text-center">
                 <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
                 </div> *@
