--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -54,9 +54,9 @@
 else
 {
     <li class="nav-item mx-2">
-        <a class="nav-link" asp-area="Identity" asp-controller="User" asp-action="Login">Login</a>
+        <a class="nav-link" asp-controller="User" asp-action="Login">Login</a>
     </li>
     <li class="nav-item mx-2">
-        <a class="nav-link" asp-area="Identity" asp-controller="User" asp-action="Register">Register</a>
+        <a class="nav-link" asp-controller="User" asp-action="Register">Register</a>
     </li>
 }
