--- a/Web/Bookworm.Web/Views/User/Login.cshtml
+++ b/Web/Bookworm.Web/Views/User/Login.cshtml
@@ -62,26 +62,22 @@
                     }
                 }
                 <div class="text-center">
-                    <a class="form-link" asp-area="Identity" asp-controller="User" asp-action="ForgotPassword">Forgot Password?</a>
+                    <a class="form-link" asp-controller="User" asp-action="ForgotPassword">Forgot Password?</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-controller="User" asp-action="ResendEmailConfirmation">
+                        Resend email confirmation
+                    </a>
                 </div>
                 <div class="text-center">
                     <a class="form-link"
-                       asp-area="Identity"
                        asp-controller="User"
                        asp-action="Register"
                        asp-route-returnUrl="@Model.ReturnUrl">
                         You don't have an account? Register here!
                     </a>
                 </div>
-                @* 
-                <div class="text-center">
-                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
-                </div> *@
             </div>
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
