--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -11,5 +11,6 @@
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
+@using Bookworm.Web.ViewModels.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
