Add initial _UserLayout

--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         📚 Share your favorite reads with the Bookworm community!
         Easily upload and share books, from classics to contemporary bestsellers, and connect with fellow book lovers.
     </p>
-    @* <div class="cardContainer">
+    <div class="cardContainer">
         <div class="card">
             <div class="card-header">
                 Quote
@@ -46,7 +46,7 @@
                 </blockquote>
             </div>
         </div>
-    </div> *@
+    </div>
     @if (this.User.Identity.IsAuthenticated)
     {
         <section class="homeBtnsSection">
