--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
                 </li>
             }
             <li>
-                <a class="dropdown-item py-3" asp-area="Identity" asp-page="/Account/Manage/Index">
+                <a class="dropdown-item py-3" asp-controller="User" asp-action="Manage">
                     <i class="fas fa-user-cog me-2"></i>Profile
                 </a>
             </li>
@@ -47,8 +47,10 @@
             </li>
         </ul>
     </li>
-    <form class="form-inline d-flex" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
-        <button type="submit" class="nav-link logout-btn px-3">Logout<i class="fas fa-sign-out-alt ms-2"></i></button>
+    <form class="form-inline d-flex" asp-controller="User" asp-action="Logout">
+        <button type="submit" class="nav-link logout-btn px-3">
+            Logout<i class="fas fa-sign-out-alt ms-2"></i>
+        </button>
     </form>
 }
 else
