--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -1,53 +1,81 @@
-﻿@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 @if (this.SignInManager.IsSignedIn(this.User))
 {
-    ApplicationUser user = await this.UserManager.GetUserAsync(this.User);
+    var user = await this.UserManager.GetUserAsync(this.User);
 
     <li class="nav-item dropdown mx-2">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <a class="nav-link dropdown-toggle"
+           role="button"
+           data-bs-toggle="dropdown"
+           aria-expanded="false">
             @user.UserName
         </a>
         <ul class="dropdown-menu animate__animated animate__fadeIn animate__faster fs-5">
-            @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+            @if (this.User.IsInRole(AdministratorRoleName))
             {
                 <li>
-                    <a class="dropdown-item py-3 " asp-area="Admin" asp-controller="Home" asp-action="Index" title="Admin">
-                        <i class="fas fa-user me-2"></i>Admin
+                    <a class="dropdown-item py-3"
+                       asp-area="Admin"
+                       asp-controller="Home"
+                       asp-action="Index">
+                        <i class="fas fa-user me-2"></i>
+                        Admin
                     </a>
                 </li>
             }
             <li>
-                <a class="dropdown-item py-3" asp-controller="User" asp-action="Manage">
-                    <i class="fas fa-user-cog me-2"></i>Profile
+                <a class="dropdown-item py-3"
+                   asp-area="Account"
+                   asp-controller="Manage"
+                   asp-action="Index">
+                    <i class="fas fa-user-cog me-2"></i>
+                    Profile
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-controller="FavoriteBook" asp-action="Favorites">
-                    <i class="fas fa-heart me-2"></i>Favorite Books
+                <a class="dropdown-item py-3"
+                   asp-area=""
+                   asp-controller="FavoriteBook"
+                   asp-action="Favorites">
+                    <i class="fas fa-heart me-2"></i>
+                    Favorite Books
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-controller="Book" asp-action="UserBooks">
-                    <i class="fas fa-book me-2"></i>My Books
+                <a class="dropdown-item py-3"
+                   asp-area=""
+                   asp-controller="Book"
+                   asp-action="UserBooks">
+                    <i class="fas fa-book me-2"></i>
+                    My Books
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-controller="Quote" asp-action="UserQuotes">
-                    <i class="fas fa-pen me-2"></i>My Quotes
+                <a class="dropdown-item py-3"
+                   asp-area=""
+                   asp-controller="Quote"
+                   asp-action="UserQuotes">
+                    <i class="fas fa-pen me-2"></i>
+                    My Quotes
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-controller="User" asp-action="Statistics">
-                    <i class="fas fa-user-graduate me-2"></i>Users Statistics
+                <a class="dropdown-item py-3"
+                   asp-area=""
+                   asp-controller="User"
+                   asp-action="Statistics">
+                    <i class="fas fa-user-graduate me-2"></i>
+                    Users Statistics
                 </a>
             </li>
         </ul>
     </li>
-    <form class="form-inline d-flex" asp-controller="User" asp-action="Logout">
+    <form class="form-inline d-flex"
+          asp-area=""
+          asp-controller="User"
+          asp-action="Logout">
         <button type="submit" class="nav-link logout-btn px-3">
             Logout<i class="fas fa-sign-out-alt ms-2"></i>
         </button>
@@ -56,9 +84,19 @@
 else
 {
     <li class="nav-item mx-2">
-        <a class="nav-link" asp-controller="User" asp-action="Login">Login</a>
+        <a class="nav-link"
+           asp-area=""
+           asp-controller="User"
+           asp-action="Login">
+            Login
+        </a>
     </li>
     <li class="nav-item mx-2">
-        <a class="nav-link" asp-controller="User" asp-action="Register">Register</a>
+        <a class="nav-link"
+           asp-area=""
+           asp-controller="User"
+           asp-action="Register">
+            Register
+        </a>
     </li>
 }
