--- a/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
@@ -3,12 +3,17 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/userLayout.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/accountLayout.css" asp-append-version="true" />
 }
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary userLayoutNavbar">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-controller="User" asp-action="Manage">Navbar</a>
+        <a class="navbar-brand"
+           asp-area="Account"
+           asp-controller="Manage"
+           asp-action="Index">
+            <i class="fa-solid fa-circle-user fa-2xl"></i>
+        </a>
         <button class="navbar-toggler"
                 type="button"
                 data-bs-toggle="collapse"
@@ -21,7 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" asp-controller="User" asp-action="ChangePassword">Change Password</a>
+                    <a class="nav-link active"
+                       aria-current="page"
+                       asp-area="Account"
+                       asp-controller="Manage"
+                       asp-action="ChangePassword">
+                        Change Password
+                    </a>
                 </li>
             </ul>
         </div>
