--- a/Web/Bookworm.Web/Views/User/ForgotPassword.cshtml
+++ b/Web/Bookworm.Web/Views/User/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ForgotPasswordViewModel
+﻿@model EmailInputViewModel
 
 @{
     ViewData["Title"] = "Forgot your password?";
@@ -9,10 +9,14 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-area="Identity" asp-controller="User" asp-action="ForgotPassword">
+        <form method="post" asp-area="" asp-controller="User" asp-action="ForgotPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="@Model.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <input asp-for="@Model.Email"
+                       class="form-control"
+                       autocomplete="username"
+                       aria-required="true"
+                       placeholder="name@example.com" />
                 <label asp-for="@Model.Email" class="form-label"></label>
                 <span asp-validation-for="@Model.Email" class="text-danger"></span>
             </div>
