--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -12,5 +12,7 @@
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
 @using Bookworm.Web.ViewModels.Identity
+@using Microsoft.AspNetCore.Identity
+@using static Bookworm.Common.Constants.GlobalConstants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
